--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <button id="resetBtn">Reset</button>
 
   <div id="statusBar">Status: Not connected</div>
+  
+  <div id="breathProgressContainer">
+    <div id="breathProgressBar"></div>
+    <div id="breathProgressText">0 / 6</div>
+  </div>
+
+
+  
 
   <div id="statsPanel">
     <div class="stat pressure" id="pressure">Pressure: -- mmHg</div>
