--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div id="breathProgressText">0 / 6</div>
   </div>
 
+  <img id="celebrationImage" style="display:none; position:absolute; top:25%; left:50%; transform:translateX(-50%); max-width:300px; z-index:999;" />
+
+  
+
 
   
 
