--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <canvas id="canvas"></canvas>
   <canvas id="graphCanvas" style="position:absolute; top:0; left:0; pointer-events:none;"></canvas>
-
+  <div id="confettiContainer"></div>
   <audio id="burstSound://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg"></audio>
 
   <script src="index.js"></script>
