--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 
   <canvas id="canvas"></canvas>
   <canvas id="graphCanvas" style="position:absolute; top:0; left:0; pointer-events:none;"></canvas>
+  
   <div id="confettiContainer"></div>
+  <img id="celebrationImage" style="display:none; position:absolute; top:25%; left:50%; transform:translateX(-50%); max-width:300px; z-index:999;" />
+
+
   <audio id="burstSound://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg"></audio>
 
   <script src="index.js"></script>
