--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <canvas id="graphCanvas" style="position:absolute; top:0; left:0; pointer-events:none;"></canvas>
   
   <div id="confettiContainer"></div>
-  <img id="celebrationImage" class="celebration-image" />
+  <img alt="hi" id="celebrationImage" class="celebration-image" />
 
 
   <audio id="burstSound://actions.google.com/sounds/v1/cartoon/cartoon_boing.ogg"></audio>
