--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
   <canvas id="canvas"></canvas>
-  <canvas id="graphCanvas" style="position:absolute; top:0; left:0; pointer-events:none;"></canvas>
+  <canvas id="graphCanvas"></canvas>
   
   <div id="confettiContainer"></div>
   <img alt="hi" id="celebrationImage" class="celebration-image" />
